--- a/packages/worker/wrangler.toml
+++ b/packages/worker/wrangler.toml
@@ -69,7 +69,7 @@ CFG_HASHED_STATIC_CACHE_AGE = 31536000 # a year
 CFG_REDIRECT_CACHE_AGE = 31536000 # a year
 CF_STATIC_ASSET_TTL = 172800 # 2 days
 CF_KV_CACHE_TTL = 86400 # a day
-CF_TURNSTILE_ENABLED = false
+CF_TURNSTILE_ENABLED = true
 CF_TURNSTILE_VERIFY_URL = "https://challenges.cloudflare.com/turnstile/v0/siteverify"
 
 ####################################################################################################
